--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 * python-geohash
 python-geohash is a fast, accurate python geohashing library.
 
+python-geohash 0.7.1 starts supporting python3k.
+
 python-geohash 0.3 can create C extension. If you want to use python-geohash
 without C extension, simply copy geohash.py into your system. geohash.py will
 work fine without C extension.
